// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Snapshots renders default dialog correctly 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with confirm and cancel buttons correctly 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with custom footer buttons correctly 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button>
            Custom Button
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different sizes correctly: Dialog with size full 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-full m-5
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different sizes correctly: Dialog with size lg 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-lg
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different sizes correctly: Dialog with size md 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different sizes correctly: Dialog with size sm 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-sm
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different sizes correctly: Dialog with size xl 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-xl
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different variants correctly: Dialog with variant confirm 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different variants correctly: Dialog with variant error 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-red-500 dark:text-red-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different variants correctly: Dialog with variant info 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different variants correctly: Dialog with variant success 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-green-500 dark:text-green-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with different variants correctly: Dialog with variant warning 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-yellow-500 dark:text-yellow-400 flex justify-center"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 9v2m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with icon correctly 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="p-6"
        >
          <div
            class="mb-4 flex-shrink-0 text-blue-500 dark:text-blue-400 flex justify-center"
          >
            <span>
              🔔
            </span>
          </div>
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dialog Snapshots renders with title correctly 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="dialog-title"
    aria-modal="true"
    class="fixed inset-0 z-50 overflow-y-auto"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-50 transition-opacity duration-300 ease-out"
      data-testid="dialog-overlay"
    />
    <div
      class="flex min-h-screen items-center justify-center p-4"
    >
      <div
        class="
            relative bg-white dark:bg-gray-800 
            rounded-lg shadow-xl text-left 
            overflow-hidden 
            w-full
            max-w-md
            transform transition-all duration-300 ease-out
            
          "
        tabindex="-1"
      >
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-4 border-b border-gray-200 dark:border-gray-700 flex items-center"
        >
          <div
            class="mr-3 flex-shrink-0 text-blue-500 dark:text-blue-400"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h3
            class="text-lg font-medium text-gray-900 dark:text-white"
            id="dialog-title"
          >
            Dialog Title
          </h3>
          <button
            aria-label="Schließen"
            class="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300"
            type="button"
          >
            <svg
              class="h-6 w-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="p-6"
        >
          <div
            class="text-gray-700 dark:text-gray-300"
          >
            Dialog Content
          </div>
        </div>
        <div
          class="bg-gray-50 dark:bg-gray-800 px-4 py-3 border-t border-gray-200 dark:border-gray-700 flex flex-shrink-0 flex-wrap justify-end gap-2"
        >
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Abbrechen
          </button>
          <button
            aria-busy="false"
            aria-disabled="false"
            class="font-medium inline-flex items-center justify-center rounded-md bg-primary-600 hover:bg-primary-700 text-white px-4 py-2 text-base cursor-pointer hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition duration-150 ease-in-out"
            role="button"
            type="button"
          >
            Bestätigen
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
